--- a/package/crds/template.upbound.io_providerconfigusages.yaml
+++ b/package/crds/template.upbound.io_providerconfigusages.yaml
@@ -4,14 +4,14 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.14.0
-  name: providerconfigusages.template.upbound.io
+  name: providerconfigusages.infisical.upbound.io
 spec:
-  group: template.upbound.io
+  group: infisical.upbound.io
   names:
     categories:
     - crossplane
     - provider
-    - template
+    - infisical
     kind: ProviderConfigUsage
     listKind: ProviderConfigUsageList
     plural: providerconfigusages
