--- a/config/provider-metadata.yaml
+++ b/config/provider-metadata.yaml
@@ -476,6 +476,7 @@ resources:
             bound_claims: (Map of String) The attributes that should be present in the JWT for it to be valid. The provided values can be a glob pattern.
             bound_issuer: (String) The unique identifier of the identity provider issuing the OIDC tokens.
             bound_subject: (String) The expected principal that is the subject of the JWT.
+            claim_metadata_mapping: '(Map of String) Map OIDC token claims to metadata fields. Example: {"role": "token.groups"}, this would become identity.metadata.oidc.claims.role'
             id: (String) The ID of the oidc auth.
             identity_id: (String) The ID of the identity to attach the configuration onto.
             ip_address: (String)
