--- a/examples-generated/project/v1alpha1/projectgroup.yaml
+++ b/examples-generated/project/v1alpha1/projectgroup.yaml
@@ -1,14 +1,14 @@
 apiVersion: project.crossplane.infisical.com/v1alpha1
-kind: ProjectIdentity
+kind: ProjectGroup
 metadata:
   annotations:
-    meta.upbound.io/example-id: project/v1alpha1/projectidentity
+    meta.upbound.io/example-id: project/v1alpha1/projectgroup
   labels:
-    testing.upbound.io/example-name: test-identity
-  name: test-identity
+    testing.upbound.io/example-name: test-group
+  name: test-group
 spec:
   forProvider:
-    identityId: <identity id>
+    groupId: <group-id>
     projectId: ${infisical_project.example.id}
     roles: '[{"role_slug": "admin"}]'
 
@@ -18,7 +18,7 @@ apiVersion: project.crossplane.infisical.com/v1alpha1
 kind: Project
 metadata:
   annotations:
-    meta.upbound.io/example-id: project/v1alpha1/projectidentity
+    meta.upbound.io/example-id: project/v1alpha1/projectgroup
   labels:
     testing.upbound.io/example-name: example
   name: example
