--- a/examples-generated/project/v1alpha1/projectgroup.yaml
+++ b/examples-generated/project/v1alpha1/projectgroup.yaml
@@ -9,7 +9,9 @@ metadata:
 spec:
   forProvider:
     groupId: <group-id>
-    projectId: ${infisical_project.example.id}
+    projectIdSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
     roles: '[{"role_slug": "admin"}]'
 
 ---
