--- a/examples/project/projectgroup.yaml
+++ b/examples/project/projectgroup.yaml
@@ -9,10 +9,25 @@ metadata:
 spec:
   forProvider:
     groupId: 62ade129-427a-43f1-91fe-b49ac45b854e
-    projectId: f3754800-5fad-4323-9cb0-f686d2eda24c
+    projectIdSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example-project
     roles: |-
       [
         {
           "role_slug": "admin"
         }
       ]
+---
+apiVersion: project.crossplane.infisical.com/v1alpha1
+kind: Project
+metadata:
+  annotations:
+    meta.upbound.io/example-id: project/v1alpha1/projectgroup
+  labels:
+    testing.upbound.io/example-name: example-project
+  name: example
+spec:
+  forProvider:
+    name: example-project
+    slug: example-project
